# commucat-cli-client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: CLIENT_GUIDE.md  README.en.md  README.ru.md
src/: animations.rs  ascii_art.rs  calls.rs  config.rs  device.rs  engine.rs  groups.rs  hexutil.rs  main.rs  media.rs  rest.rs  tui.rs  voice.rs
