[package]
name = "commucat-cli-client"
version = "0.1.0"
edition = "2024"
description = "Terminal CCP-1 client with Noise tunnel and k9s-like UI"
license = "MPL-2.0"
authors = ["Ducheved <me@ducheved.ru>"]
homepage = "https://commucat.tech"
repository = "https://github.com/ducheved/commucat-cli-client"
readme = "README.md"
keywords = ["commucat", "ccp", "client"]
categories = ["command-line-utilities", "network-programming"]
publish = false

[dependencies]
anyhow = "1.0"
bytes = "1.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.4", features = ["derive"] }
commucat-crypto = "1.0.41"
commucat-proto = "1.0.41"
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"
h2 = "0.3"
http = "0.2"
ratatui = "0.26"
rustls = { version = "0.21", features = ["logging", "dangerous_configuration"] }
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "signal", "io-util", "net", "time"] }
tokio-rustls = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
webpki-roots = "0.25"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
getrandom = "0.2"
directories = "5"
uuid = { version = "1.10", features = ["v4"] }
base64 = "0.21"
